# Stacking-Audio-Tagging

./: .gitignore  README.md  menu.sh  pyproject.toml
config/: config_project.py
database/: config_project.py  config_shell.py
database/CAL500/: config_cal500.py
database/CAL500/model/: model_chromagram  model_chromagram.h5  model_chromagram.hdf5  model_mel_spectrogram.h5  model_mfcc.h5  model_stft.h5
database/CAL500/src/model-1/: model.py  (+2 more)
database/FMA/model/: model_chromagram.h5  model_mel_spectrogram.h5  model_mfcc.h5  model_stft.h5
database/MagnaTagATune/: config_magnatagatune.py
database/MagnaTagATune/model/: model_chromagram.h5  model_mel_spectrogram.h5  model_mfcc.h5  model_stft.h5
database/MillionSong/: config_millionsong.py  model_chromagram.h5  model_mel_spectrogram.h5  model_mfcc.h5
docs/: conf.py  index.rst
environment/: environment.yml  install_environment.sh  requirements.txt  update_packages_environment.sh  update_yml_environment.sh
scripts/: convert_csv_to_arff.sh  get_database.sh
src/: check_data.py  convert_to_arff.py  data_ml.py  generate_autoencoders_chromagram.py  generate_autoencoders_mel_spectrogram.py  generate_autoencoders_mfcc.py  generate_autoencoders_stft.py  generate_autoencoders_stft_harmonic.py  generate_autoencoders_stft_percussive.py  generate_graph.py  generate_holdout.py  generate_info_data.py  generate_spectrogram.py  generate_structure.py  metrics.py  metrics_ml.py  model_autoencoders_chromagram.py  model_autoencoders_mel_spectrogram.py  model_autoencoders_mfcc.py  model_autoencoders_stft.py  preprocessing_data.py
(+599 files in other folders)
