[tool.poetry]
name = "stacking-audio-tagging"
version = "0.1.0"
description = ""
authors = ["Juliano Donini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
librosa = "^0.7.2"
pylint = "^2.4.4"
tqdm = "^4.43.0"
pandas = "^1.0.1"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
